Fix SonarCloud issues: duplicated literals, cognitive complexity, Math.clamp, unused methods